Pulled in MailerLite data

--- a/jupyter/ig.ipynb
+++ b/jupyter/ig.ipynb
@@ -176,7 +176,10 @@
     }
    ],
    "source": [
-    "pd.json_normalize(data['data'], 'values')"
+    "pd.json_normalize(data['data'], 'values')\n",
+    "\n",
+    "\n",
+    "# This is a new changssse"
    ]
   },
   {
