Continual dev of IG data

--- a/ig.ipynb
+++ b/ig.ipynb
@@ -1785,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "id": "2da6244b-d910-4893-a12d-1e56a58a608e",
    "metadata": {
     "collapsed": false,
@@ -1795,15 +1795,13 @@
     {
      "data": {
       "text/plain": [
-       "{'data': [{'id': '17997487276675308'},\n",
-       "  {'id': '17867784815886134'},\n",
-       "  {'id': '17997618547630849'},\n",
-       "  {'id': '17974467521014931'}],\n",
-       " 'paging': {'cursors': {'before': 'QVFIUlVEZAkwydzZAnQjJwb1VpbS04QVB3RERwN3FHSEk2RThpZAGI0M196Rk5KS0xBTDN4OXB3N2kzT0FybWs2bUdJbk5XYkZALbkRzXzA0V1dVR05oMG1sRlpR',\n",
-       "   'after': 'QVFIUnNSbzdYSEt0Q0tCTmxhWWV2ZAU1kaGtZAWTRDQzRZAdl9fNHZADM1ZAGZA0lmRlJ2QVJFYTlXcEpvTnQ3QjR3UzlSNFNMbFBaODlTU01YMGxGOHBkcGlsUkhR'}}}"
+       "['17997487276675308',\n",
+       " '17867784815886134',\n",
+       " '17997618547630849',\n",
+       " '17974467521014931']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1812,14 +1810,15 @@
     "url = \"https://graph.facebook.com/v16.0/17841456374080288/media?access_token={}\".format(access_token)\n",
     "\n",
     "request = requests.get(url)\n",
-    "media_list = request.json()\n",
+    "media_list = request.json()['data']\n",
+    "media_list = [d['id'] for d in media_list]\n",
     "\n",
-    "media_list\n"
+    "media_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "4eeae087-65c5-4224-819f-f6f3953c9152",
    "metadata": {
     "collapsed": false
@@ -1827,7 +1826,59 @@
    "outputs": [],
    "source": [
     "for media in media_list:\n",
-    "  "
+    "  url = \"https://graph.facebook.com/v16.0/{}?fields=id,timestamp,media_product_type,media_type,permalink,like_count,comments_count,caption&access_token={}\".format(media, access_token)\n",
+    "  request = requests.get(url)\n",
+    "  media_info = request.json()\n",
+    "\n",
+    "  if media_info['media_type'] == 'IMAGE' or media_info['media_type'] == 'VIDEO':\n",
+    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=follows,profile_visits,shares,total_interactions,reach,saved,video_views\".format(media)\n",
+    "    request = requests.get(url)\n",
+    "    media_metrics = request.json()\n",
+    "\n",
+    "  if media_info['media_type'] == 'CAROUSEL_ALBUM'\n",
+    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=carousel_album_engagement,carousel_album_impressions,carousel_album_reach,carousel_album_saved,carousel_album_video_views\".format(media)\n",
+    "    request = requests.get(url)\n",
+    "    media_metrics = request.json()\n",
+    "\n",
+    "  if media_info['media_product_type'] == 'STORY'\n",
+    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=comments,likes,plays,reach,saved,shares,total_interactions\".format(media)\n",
+    "    request = requests.get(url)\n",
+    "    media_metrics = request.json()\n",
+    "\n",
+    "  if media_info['media_product_type'] == 'REELS'\n",
+    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=exits,impressions,reach,replies,taps_forward,taps_back\".format(media)\n",
+    "    request = requests.get(url)\n",
+    "    media_metrics = request.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "88cd3105-a578-487c-88d5-d210411968aa",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '17974467521014931',\n",
+       " 'timestamp': '2023-03-29T07:32:41+0000',\n",
+       " 'media_product_type': 'FEED',\n",
+       " 'media_type': 'IMAGE',\n",
+       " 'permalink': 'https://www.instagram.com/p/CqXVTQ2PEC5/',\n",
+       " 'like_count': 15,\n",
+       " 'comments_count': 0,\n",
+       " 'caption': \"(English version below 👇🏼)\\n\\n想成為一名成功的創作者，除了要努力增加收入來源和受眾建立默契與信任外，同時也要小心職業倦怠。專注用內容和粉絲互動，創造價值建立品牌。\\n\\n想在創作路上成功規則一直都沒變過，永遠相信自己和對創作的熱忱，別讓爆紅話題分散你的注意力。\\n\\n讓 CreatorLabs 教你怎麼做：https://www.creatorlabs.com/\\n＿＿\\n\\nTo thrive as a creator, you need to diversify your income streams, build trust with your audience, and avoid burning out. Focus on creating value, connecting with your fans, and protecting your brand. \\n\\nThe playbook for creators' success remains the same, stay true to yourself and your craft, and let the buzzwords buzz without distracting you from your goals. \\n\\nWant to know how? Let CreatorLabs show you: https://www.creatorlabs.com/\"}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media_info"
    ]
   }
  ],
