--- a/ig.ipynb
+++ b/ig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 81,
    "id": "eb5c0b3e-7381-4793-97c7-f94dde847872",
    "metadata": {
     "colab": {
@@ -168,11 +168,11 @@
        "   'title': 'Website clicks',\n",
        "   'description': 'The total number of taps on the website link in this profile',\n",
        "   'id': '17841456374080288/insights/website_clicks/day'}],\n",
-       " 'paging': {'previous': 'https://graph.facebook.com/v16.0/17841456374080288/insights?access_token=EAANTIDDj7vQBAD73dhUqrdmShYBRy82VSjQPDCadOjwtil2TjQ3FGkmBxSyqVN2Yi1ZCU4kYhJghkoLZAXhtZCXZCZAjxwEB0fZBynH0ZBplD4051b3bokMXSeKMSIPhjrEAfGnoj2CSom5ZCGvn4UbMpgzyiew84q4cVlZC6yHuDzhafXBuPnppZBmomGZC4ZBZAhsyeylzcINmRlpGQUnzmzwOZBwNmSw3YjHvUZD&pretty=0&since=1678809599&until=1680019199&metric=impressions%2Creach%2Cprofile_views%2Cemail_contacts%2Cget_directions_clicks%2Cphone_call_clicks%2Ctext_message_clicks%2Cwebsite_clicks&period=day',\n",
-       "  'next': 'https://graph.facebook.com/v16.0/17841456374080288/insights?access_token=EAANTIDDj7vQBAD73dhUqrdmShYBRy82VSjQPDCadOjwtil2TjQ3FGkmBxSyqVN2Yi1ZCU4kYhJghkoLZAXhtZCXZCZAjxwEB0fZBynH0ZBplD4051b3bokMXSeKMSIPhjrEAfGnoj2CSom5ZCGvn4UbMpgzyiew84q4cVlZC6yHuDzhafXBuPnppZBmomGZC4ZBZAhsyeylzcINmRlpGQUnzmzwOZBwNmSw3YjHvUZD&pretty=0&since=1681228801&until=1682438401&metric=impressions%2Creach%2Cprofile_views%2Cemail_contacts%2Cget_directions_clicks%2Cphone_call_clicks%2Ctext_message_clicks%2Cwebsite_clicks&period=day'}}"
+       " 'paging': {'previous': 'https://graph.facebook.com/v16.0/17841456374080288/insights?access_token=EAANTIDDj7vQBAIHCRSZCol18SZBBy8iBQreSCV3sZBfr8lNCIzxektCZBlVsby3wrnfx4YQYwuCY1bTPndF0YKsZCbetIr9CkhyOm3K8ucDgpaDZBGpymeZA8fx7ZAizI7pZCtigIJzBruVRzTt1MtsUf2K196KlQj7CzUJcopXP8q8K7dZCzLdlxZBANcOQoZBiXTf1wM7T2YHABgZDZD&pretty=0&since=1678809599&until=1680019199&metric=impressions%2Creach%2Cprofile_views%2Cemail_contacts%2Cget_directions_clicks%2Cphone_call_clicks%2Ctext_message_clicks%2Cwebsite_clicks&period=day',\n",
+       "  'next': 'https://graph.facebook.com/v16.0/17841456374080288/insights?access_token=EAANTIDDj7vQBAIHCRSZCol18SZBBy8iBQreSCV3sZBfr8lNCIzxektCZBlVsby3wrnfx4YQYwuCY1bTPndF0YKsZCbetIr9CkhyOm3K8ucDgpaDZBGpymeZA8fx7ZAizI7pZCtigIJzBruVRzTt1MtsUf2K196KlQj7CzUJcopXP8q8K7dZCzLdlxZBANcOQoZBiXTf1wM7T2YHABgZDZD&pretty=0&since=1681228801&until=1682438401&metric=impressions%2Creach%2Cprofile_views%2Cemail_contacts%2Cget_directions_clicks%2Cphone_call_clicks%2Ctext_message_clicks%2Cwebsite_clicks&period=day'}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
     "import requests\n",
     "import pandas as pd\n",
     "\n",
-    "access_token = \"EAANTIDDj7vQBAD73dhUqrdmShYBRy82VSjQPDCadOjwtil2TjQ3FGkmBxSyqVN2Yi1ZCU4kYhJghkoLZAXhtZCXZCZAjxwEB0fZBynH0ZBplD4051b3bokMXSeKMSIPhjrEAfGnoj2CSom5ZCGvn4UbMpgzyiew84q4cVlZC6yHuDzhafXBuPnppZBmomGZC4ZBZAhsyeylzcINmRlpGQUnzmzwOZBwNmSw3YjHvUZD\"\n",
+    "access_token = \"EAANTIDDj7vQBAIHCRSZCol18SZBBy8iBQreSCV3sZBfr8lNCIzxektCZBlVsby3wrnfx4YQYwuCY1bTPndF0YKsZCbetIr9CkhyOm3K8ucDgpaDZBGpymeZA8fx7ZAizI7pZCtigIJzBruVRzTt1MtsUf2K196KlQj7CzUJcopXP8q8K7dZCzLdlxZBANcOQoZBiXTf1wM7T2YHABgZDZD\"\n",
     "url = \"https://graph.facebook.com/v16.0/17841456374080288/insights?pretty=0&since=1680019200&until=1681228800&metric=impressions,reach,profile_views,email_contacts,get_directions_clicks,phone_call_clicks,text_message_clicks,website_clicks&period=day&access_token={}\".format(access_token)\n",
     "\n",
     "request = requests.get(url)\n",
@@ -1818,43 +1818,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 115,
+   "id": "1b8cfa60-9ad8-4ad8-8f97-a527491f1fa8",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def format_data_dict(raw_data):\n",
+    "  data_dict = {}\n",
+    "  \n",
+    "  for metric in raw_data:\n",
+    "    data_dict[metric['name']] = metric['values'][0]['value']\n",
+    "\n",
+    "  return data_dict\n",
+    "\n",
+    "def format_action_breakdown_dict(raw_data):\n",
+    "  breakdown_dict = {'bio_link_clicked': 0, 'call': 0, 'direction': 0, 'email': 0, 'other': 0, 'text': 0}\n",
+    "\n",
+    "  for breakdown in raw_data:\n",
+    "    breakdown_dict[breakdown['dimension_values'][0]] = breakdown['value']\n",
+    "\n",
+    "  return breakdown_dict\n",
+    "\n",
+    "def format_navigation_breakdown_dict(raw_data):\n",
+    "  breakdown_dict = {'automatic_forward': 0, 'tap_back': 0, 'tap_exit': 0, 'tap_forward': 0, 'swipe_back': 0, 'swipe_down': 0, 'swipe_forward': 0, 'swipe_up': 0}\n",
+    "\n",
+    "  for breakdown in raw_data:\n",
+    "    breakdown_dict[breakdown['dimension_values'][0]] = breakdown['value']\n",
+    "\n",
+    "  return breakdown_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "id": "4eeae087-65c5-4224-819f-f6f3953c9152",
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "data_dict_list = []\n",
+    "\n",
     "for media in media_list:\n",
     "  url = \"https://graph.facebook.com/v16.0/{}?fields=id,timestamp,media_product_type,media_type,permalink,like_count,comments_count,caption&access_token={}\".format(media, access_token)\n",
     "  request = requests.get(url)\n",
     "  media_info = request.json()\n",
     "\n",
     "  if media_info['media_type'] == 'IMAGE' or media_info['media_type'] == 'VIDEO':\n",
-    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=follows,profile_visits,shares,total_interactions,reach,saved,video_views\".format(media)\n",
+    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=follows,profile_visits,shares,total_interactions,reach,saved,video_views&access_token={}\".format(media, access_token)\n",
     "    request = requests.get(url)\n",
-    "    media_metrics = request.json()\n",
+    "    media_metrics = request.json()['data']\n",
+    "    data_dict = format_data_dict(media_metrics)\n",
     "\n",
-    "  if media_info['media_type'] == 'CAROUSEL_ALBUM'\n",
-    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=carousel_album_engagement,carousel_album_impressions,carousel_album_reach,carousel_album_saved,carousel_album_video_views\".format(media)\n",
+    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=profile_activity&breakdown=action_type&access_token={}\".format(media, access_token)\n",
     "    request = requests.get(url)\n",
-    "    media_metrics = request.json()\n",
+    "    post_profile_activity_breakdown = request.json()\n",
+    "    try:\n",
+    "      all_breakdowns = post_profile_activity_breakdown['data'][0]['total_value']['breakdowns'][0]['results']\n",
+    "      breakdown_dict = format_action_breakdown_dict(all_breakdowns)\n",
+    "    except KeyError:\n",
+    "      breakdown_dict = {'bio_link_clicked': 0, 'call': 0, 'direction': 0, 'email': 0, 'other': 0, 'text': 0}\n",
     "\n",
-    "  if media_info['media_product_type'] == 'STORY'\n",
-    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=comments,likes,plays,reach,saved,shares,total_interactions\".format(media)\n",
-    "    request = requests.get(url)\n",
-    "    media_metrics = request.json()\n",
+    "    data_dict.update(breakdown_dict)\n",
     "\n",
-    "  if media_info['media_product_type'] == 'REELS'\n",
-    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=exits,impressions,reach,replies,taps_forward,taps_back\".format(media)\n",
+    "    data_dict_list.append(data_dict)\n",
+    "    \n",
+    "  if media_info['media_type'] == 'CAROUSEL_ALBUM':\n",
+    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=carousel_album_engagement,carousel_album_impressions,carousel_album_reach,carousel_album_saved,carousel_album_video_views&access_token={}\".format(media, access_token)\n",
     "    request = requests.get(url)\n",
-    "    media_metrics = request.json()"
+    "    media_metrics = request.json()['data']\n",
+    "    data_dict = format_data_dict(media_metrics)\n",
+    "\n",
+    "    data_dict_list.append(data_dict)\n",
+    "\n",
+    "  if media_info['media_product_type'] == 'STORY':\n",
+    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=comments,likes,plays,reach,saved,shares,total_interactions&access_token={}\".format(media, access_token)\n",
+    "    request = requests.get(url)\n",
+    "    media_metrics = request.json()['data']\n",
+    "    data_dict = format_data_dict(media_metrics)\n",
+    "\n",
+    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=profile_activity&breakdown=action_type&access_token={}\".format(media, access_token)\n",
+    "    request = requests.get(url)\n",
+    "    story_profile_activity_breakdown = request.json()\n",
+    "    try:\n",
+    "      all_breakdowns = story_profile_activity_breakdown['data'][0]['total_value']['breakdowns'][0]['results']\n",
+    "      breakdown_dict = format_action_breakdown_dict(all_breakdowns)\n",
+    "    except KeyError:\n",
+    "      breakdown_dict = {'bio_link_clicked': 0, 'call': 0, 'direction': 0, 'email': 0, 'other': 0, 'text': 0}\n",
+    "\n",
+    "    data_dict.update(breakdown_dict)\n",
+    "\n",
+    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=navigation&breakdown=story_navigation_action_type&access_token={}\".format(media, access_token)\n",
+    "    request = requests.get(url)\n",
+    "    story_navigation_breakdown = request.json()\n",
+    "    try:\n",
+    "      all_breakdowns = story_navigation_activity_breakdown['data'][0]['total_value']['breakdowns'][0]['results']\n",
+    "      breakdown_dict = format_action_breakdown_dict(all_breakdowns)\n",
+    "    except KeyError:\n",
+    "      breakdown_dict = {'automatic_forward': 0, 'tap_back': 0, 'tap_exit': 0, 'tap_forward': 0, 'swipe_back': 0, 'swipe_down': 0, 'swipe_forward': 0, 'swipe_up': 0}\n",
+    "\n",
+    "    data_dict.update(breakdown_dict)\n",
+    "    data_dict_list.append(data_dict)\n",
+    "\n",
+    "  if media_info['media_product_type'] == 'REELS':\n",
+    "    url = \"https://graph.facebook.com/v16.0/{}/insights?metric=exits,impressions,reach,replies,taps_forward,taps_back&access_token={}\".format(media, access_token)\n",
+    "    request = requests.get(url)\n",
+    "    media_metrics = request.json()['data']\n",
+    "\n",
+    "    data_dict = format_data_dict(media_metrics)\n",
+    "\n",
+    "    data_dict_list.append(data_dict)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "88cd3105-a578-487c-88d5-d210411968aa",
+   "execution_count": 120,
+   "id": "f3b6ae27-010e-49c6-be7e-e3683a8d6248",
    "metadata": {
     "collapsed": false
    },
@@ -1862,23 +1943,139 @@
     {
      "data": {
       "text/plain": [
-       "{'id': '17974467521014931',\n",
-       " 'timestamp': '2023-03-29T07:32:41+0000',\n",
-       " 'media_product_type': 'FEED',\n",
-       " 'media_type': 'IMAGE',\n",
-       " 'permalink': 'https://www.instagram.com/p/CqXVTQ2PEC5/',\n",
-       " 'like_count': 15,\n",
-       " 'comments_count': 0,\n",
-       " 'caption': \"(English version below 👇🏼)\\n\\n想成為一名成功的創作者，除了要努力增加收入來源和受眾建立默契與信任外，同時也要小心職業倦怠。專注用內容和粉絲互動，創造價值建立品牌。\\n\\n想在創作路上成功規則一直都沒變過，永遠相信自己和對創作的熱忱，別讓爆紅話題分散你的注意力。\\n\\n讓 CreatorLabs 教你怎麼做：https://www.creatorlabs.com/\\n＿＿\\n\\nTo thrive as a creator, you need to diversify your income streams, build trust with your audience, and avoid burning out. Focus on creating value, connecting with your fans, and protecting your brand. \\n\\nThe playbook for creators' success remains the same, stay true to yourself and your craft, and let the buzzwords buzz without distracting you from your goals. \\n\\nWant to know how? Let CreatorLabs show you: https://www.creatorlabs.com/\"}"
+       "[{'carousel_album_engagement': 77,\n",
+       "  'carousel_album_impressions': 626,\n",
+       "  'carousel_album_reach': 575,\n",
+       "  'saved': 4,\n",
+       "  'video_views': 0},\n",
+       " {'reach': 324,\n",
+       "  'saved': 0,\n",
+       "  'video_views': 0,\n",
+       "  'follows': 0,\n",
+       "  'profile_visits': 4,\n",
+       "  'shares': 0,\n",
+       "  'total_interactions': 14,\n",
+       "  'bio_link_clicked': 0,\n",
+       "  'call': 0,\n",
+       "  'direction': 0,\n",
+       "  'email': 0,\n",
+       "  'other': 0,\n",
+       "  'text': 0},\n",
+       " {'reach': 213,\n",
+       "  'saved': 1,\n",
+       "  'video_views': 0,\n",
+       "  'follows': 4,\n",
+       "  'profile_visits': 46,\n",
+       "  'shares': 5,\n",
+       "  'total_interactions': 23,\n",
+       "  'bio_link_clicked': 2,\n",
+       "  'call': 0,\n",
+       "  'direction': 0,\n",
+       "  'email': 0,\n",
+       "  'other': 0,\n",
+       "  'text': 0},\n",
+       " {'reach': 168,\n",
+       "  'saved': 0,\n",
+       "  'video_views': 0,\n",
+       "  'follows': 1,\n",
+       "  'profile_visits': 35,\n",
+       "  'shares': 3,\n",
+       "  'total_interactions': 18,\n",
+       "  'bio_link_clicked': 1,\n",
+       "  'call': 0,\n",
+       "  'direction': 0,\n",
+       "  'email': 0,\n",
+       "  'other': 0,\n",
+       "  'text': 0}]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "media_info"
+    "data_dict_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "25f1eaa0-0536-41dc-970c-23de2abbd7a9",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'name': 'profile_activity',\n",
+       "   'period': 'lifetime',\n",
+       "   'values': [{'value': 0}],\n",
+       "   'title': 'Profile activity',\n",
+       "   'description': '[IG Insights] This header is the name of a metric that appears on an educational info sheet for a particular for a particular post, story, video or promotion. This metric is the sum of all profile actions that people take when they engage with this content.',\n",
+       "   'id': '17867784815886134/insights/profile_activity/lifetime'}]}"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "post_profile_activity_breakdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "4bb31158-d08c-42c8-825b-30e6cb9bee1a",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'carousel_album_engagement',\n",
+       "  'period': 'lifetime',\n",
+       "  'values': [{'value': 77}],\n",
+       "  'title': 'Carousel album engagement',\n",
+       "  'description': 'The total number of likes and comments on the carousel album',\n",
+       "  'id': '17997487276675308/insights/carousel_album_engagement/lifetime'},\n",
+       " {'name': 'carousel_album_impressions',\n",
+       "  'period': 'lifetime',\n",
+       "  'values': [{'value': 626}],\n",
+       "  'title': 'Carousel album impressions',\n",
+       "  'description': 'The total number of times that the carousel album has been seen',\n",
+       "  'id': '17997487276675308/insights/carousel_album_impressions/lifetime'},\n",
+       " {'name': 'carousel_album_reach',\n",
+       "  'period': 'lifetime',\n",
+       "  'values': [{'value': 575}],\n",
+       "  'title': 'Carousel album reach',\n",
+       "  'description': 'The total number of unique accounts that have seen the carousel album',\n",
+       "  'id': '17997487276675308/insights/carousel_album_reach/lifetime'},\n",
+       " {'name': 'saved',\n",
+       "  'period': 'lifetime',\n",
+       "  'values': [{'value': 4}],\n",
+       "  'title': 'Carousel album saved',\n",
+       "  'description': 'The total number of unique accounts that have saved the carousel album',\n",
+       "  'id': '17997487276675308/insights/saved/lifetime'},\n",
+       " {'name': 'video_views',\n",
+       "  'period': 'lifetime',\n",
+       "  'values': [{'value': 0}],\n",
+       "  'title': 'Carousel album video views',\n",
+       "  'description': 'The total number of times that the carousel album has been seen',\n",
+       "  'id': '17997487276675308/insights/video_views/lifetime'}]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media_metrics"
    ]
   }
  ],
