commited video analytics data changes

--- a/pull_data_experimentation.ipynb
+++ b/pull_data_experimentation.ipynb
@@ -51252,8 +51252,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "81bea867",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#internship- video analytics data\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "844a6c3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9887bc25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "41a0a030",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>statisticsType</th>\n",
+       "      <th>value</th>\n",
+       "      <th>entity</th>\n",
+       "      <th>timeRange.start</th>\n",
+       "      <th>timeRange.end</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TIME_WATCHED</td>\n",
+       "      <td>1320153</td>\n",
+       "      <td>urn:li:ugcPost:7069158093388992512</td>\n",
+       "      <td>2023-05-31</td>\n",
+       "      <td>2023-06-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TIME_WATCHED</td>\n",
+       "      <td>1222832</td>\n",
+       "      <td>urn:li:ugcPost:7069158093388992512</td>\n",
+       "      <td>2023-05-30</td>\n",
+       "      <td>2023-05-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TIME_WATCHED</td>\n",
+       "      <td>260452</td>\n",
+       "      <td>urn:li:ugcPost:7069158093388992512</td>\n",
+       "      <td>2023-06-05</td>\n",
+       "      <td>2023-06-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TIME_WATCHED</td>\n",
+       "      <td>69950</td>\n",
+       "      <td>urn:li:ugcPost:7069158093388992512</td>\n",
+       "      <td>2023-06-21</td>\n",
+       "      <td>2023-06-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TIME_WATCHED</td>\n",
+       "      <td>66196</td>\n",
+       "      <td>urn:li:ugcPost:7069158093388992512</td>\n",
+       "      <td>2023-06-04</td>\n",
+       "      <td>2023-06-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>TIME_WATCHED</td>\n",
+       "      <td>61924</td>\n",
+       "      <td>urn:li:ugcPost:7069158093388992512</td>\n",
+       "      <td>2023-06-01</td>\n",
+       "      <td>2023-06-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>TIME_WATCHED</td>\n",
+       "      <td>59822</td>\n",
+       "      <td>urn:li:ugcPost:7069158093388992512</td>\n",
+       "      <td>2023-06-07</td>\n",
+       "      <td>2023-06-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>TIME_WATCHED</td>\n",
+       "      <td>57929</td>\n",
+       "      <td>urn:li:ugcPost:7069158093388992512</td>\n",
+       "      <td>2023-06-02</td>\n",
+       "      <td>2023-06-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>TIME_WATCHED</td>\n",
+       "      <td>51790</td>\n",
+       "      <td>urn:li:ugcPost:7069158093388992512</td>\n",
+       "      <td>2023-06-20</td>\n",
+       "      <td>2023-06-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>TIME_WATCHED</td>\n",
+       "      <td>32776</td>\n",
+       "      <td>urn:li:ugcPost:7069158093388992512</td>\n",
+       "      <td>2023-06-09</td>\n",
+       "      <td>2023-06-10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  statisticsType    value                              entity timeRange.start  \\\n",
+       "0   TIME_WATCHED  1320153  urn:li:ugcPost:7069158093388992512      2023-05-31   \n",
+       "1   TIME_WATCHED  1222832  urn:li:ugcPost:7069158093388992512      2023-05-30   \n",
+       "2   TIME_WATCHED   260452  urn:li:ugcPost:7069158093388992512      2023-06-05   \n",
+       "3   TIME_WATCHED    69950  urn:li:ugcPost:7069158093388992512      2023-06-21   \n",
+       "4   TIME_WATCHED    66196  urn:li:ugcPost:7069158093388992512      2023-06-04   \n",
+       "5   TIME_WATCHED    61924  urn:li:ugcPost:7069158093388992512      2023-06-01   \n",
+       "6   TIME_WATCHED    59822  urn:li:ugcPost:7069158093388992512      2023-06-07   \n",
+       "7   TIME_WATCHED    57929  urn:li:ugcPost:7069158093388992512      2023-06-02   \n",
+       "8   TIME_WATCHED    51790  urn:li:ugcPost:7069158093388992512      2023-06-20   \n",
+       "9   TIME_WATCHED    32776  urn:li:ugcPost:7069158093388992512      2023-06-09   \n",
+       "\n",
+       "  timeRange.end  \n",
+       "0    2023-06-01  \n",
+       "1    2023-05-31  \n",
+       "2    2023-06-06  \n",
+       "3    2023-06-22  \n",
+       "4    2023-06-05  \n",
+       "5    2023-06-02  \n",
+       "6    2023-06-08  \n",
+       "7    2023-06-03  \n",
+       "8    2023-06-21  \n",
+       "9    2023-06-10  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "endpoint = \"https://api.linkedin.com/rest/videoAnalytics?q=entity&entity=urn:li:ugcPost:7069158093388992512&type=TIME_WATCHED&aggregation=DAY\"\n",
+    "\n",
+    "api_headers = {\n",
+    "    \"Authorization\": \"Bearer AQUD5zgMVkj0OyKtTC_sg9WWQi0vkZ9CTN9hTZ3qBea3hYtICYbeLi82P6VV6QbvUJOyI2pUpJ5BtA4D3qOoj9n0oF5Gsyme6QJQgU3VgJQYrlUeBhg7eRdAUUFo8BoIjdL_CSf0I-IsPvcazM8YsC98FIrdCffAMxgmRx_vGO2y7XOhFqEQ8X4-q-sFjeigvL2-FCiYIq1HFaeqg-4qtWk_yyKRW8qNLLqghQbcD8gO_-7ZjraedsZ4Lxgj1x51S0Uii-YfS9OK8utwCdwl4GGpGjqme9TOjI23hjBpa_DC-ON7AwxcOYBS28N3DglxCZE5rzmnZC_4fIvSMU1dQ-kUFLkDKQ\",\n",
+    "    'LinkedIn-Version': '202302'\n",
+    "}\n",
+    "video_analytics_request = requests.get(endpoint, headers=api_headers)\n",
+    "video_analytics_data = video_analytics_request.json()\n",
+    "video_analytics_data\n",
+    "video_analytics_data['elements']\n",
+    "pd. DataFrame(video_analytics_data['elements'])\n",
+    "vd = pd.json_normalize(video_analytics_data['elements'])\n",
+    "vd['timeRange.start'] = pd.to_datetime(vd['timeRange.start'], unit = 'ms')\n",
+    "vd['timeRange.end'] = pd.to_datetime(vd['timeRange.end'], unit = 'ms')\n",
+    "vd\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "442228f0",
    "metadata": {},
    "outputs": [],
    "source": []
